# ai-in-sdlc

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
designing/: DesignPacket1.md  DesignPacket2-Part1.md  DesignPacket2-Part2.md  DesignPacket3.md  DesignPacket4-Part1.md  DesignPacket4-Part2.md  DesignPacket4-Part3.md  DesignPacket4-Part4-Checklist.md  DesignPacket5-Part1.md  DesignPacket5-Part2.md  DesignPacket5-Part3.md  vite-and-tooling-config.md  websocket-protocol.md
docs/: PROGRESS.md
frontend/: package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ChatPanel.tsx
frontend/src/hooks/: useOnlineStatus.ts  useWebSocket.ts
frontend/src/pages/: HomePage.tsx  SessionPage.tsx
frontend/src/store/: sessionStore.ts
frontend/src/types/: api.ts
frontend/tests/e2e/: rd-flow.spec.ts  session-flow.spec.ts  smoke.spec.ts  ws-streaming.spec.ts
langdocs/: doc1.md  doc2.md  models.md  uv.md
research/: DesignDocument.md  Multi-Agent Coding System Design.md  Software Development Life Cycle (SDLC)_ Complete G.md  Some feedback from a review___You've provided a te.md  Some more feedback. What are your thoughts____This.md  Specification Driven Development (SDD)_ The AI-Fir.md  condensed-meta-prompt.md  meta-prompt-8000chars.md  sdlc_comprehensive_data.csv  ultimate-ai-agent-prompt.md
scripts/: __init__.py  log_convo_sample.py  log_extraction_sample.py  migrate.py  seed_data.py  setup-dev.bat  setup-dev.sh
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  base.py
src/agents/conversational/: __init__.py  agent.py  clarification_detector.py  confidence_scorer.py  context_manager.py  prompt_builder.py  response_formatter.py  schemas.py  token_budget.py
src/agents/extraction/: __init__.py  agent.py  ambiguity_detector.py  criteria_generator.py  entity_extractor.py  prompt_builder.py  schemas.py  traceability_linker.py  type_classifier.py
src/agents/inference/: agent.py
src/agents/synthesis/: agent.py
src/agents/validation/: agent.py
src/api/: __init__.py
src/api/dependencies/: auth.py
src/api/middleware/: __init__.py  error_handler.py  logging.py
src/api/routes/: __init__.py  auth.py  health.py  rd.py  sessions.py  websocket.py
src/api/websocket/: manager.py
src/models/: __init__.py  database.py
src/orchestrator/: __init__.py  checkpointer.py  graph.py  nodes.py  routing.py  state.py
src/schemas/: __init__.py  api.py  chat.py  requirement.py  state.py
src/services/: __init__.py  embedding_service.py
src/storage/: __init__.py  postgres.py  redis_cache.py  requirement_store.py  vectorstore.py
src/templates/: __init__.py
src/templates/prompts/: conversational.txt  extraction.txt
src/utils/: __init__.py  logging.py
src/validation/: __init__.py
stories/: story-1-document.md  story-1-uv-setup.md  story-2-document.md  story-3-document.md  story-4-document.md  story-5-document.md  story-6-audit-document.md  story-6-audit-document_contd.md  story-6-websocket-protocol-spec.md  story-6b-rd-e2e-testing.md  story-7-inference-validation-review.md
tests/fixtures/: __init__.py
tests/integration/: test_database.py  test_requirement_store.py
tests/integration/agents/: __init__.py  test_conversational_flow.py  test_extraction_e2e.py  test_extraction_embedding.py  test_extraction_flow.py
tests/integration/api/: test_rd_endpoints.py  test_sessions_orchestrator.py  test_websocket_basic.py
tests/integration/orchestrator/: test_checkpointing.py
tests/unit/: test_config.py  test_health.py
tests/unit/agents/: __init__.py  test_confidence_scorer.py  test_conversational_agent.py  test_conversational_components.py  test_conversational_errors.py  test_token_budget.py
tests/unit/orchestrator/: test_graph.py  test_routing.py
(+14 files in other folders)
