[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "req-eng-platform"
version = "1.0.0"
description = "Multi-agent conversational requirements engineering platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "AI-in-SDLC Team", email = "dev@example.com" }
]
keywords = ["ai", "agents", "requirements", "langgraph", "langchain"]

dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.12.0",
  "psycopg[binary]>=3.1.17",
  "redis>=5.0.0",
  "chromadb>=0.4.15",
  "langchain>=0.1.0",
  "langchain-openai>=0.0.1",
  "langgraph>=0.0.28",
  "langsmith>=0.1.0",
  "openai>=1.3.0",
  "python-dotenv>=1.0.0",
  "pydantic-ai>=0.0.1",
  "python-multipart>=0.0.6",
  "jinja2>=3.1.0",
  "pyyaml>=6.0.0",
  "tenacity>=8.2.0",
  "structlog>=23.2.0",
  "python-json-logger>=2.0.7",
  "tiktoken>=0.7.0"
]

[project.urls]
repository = "https://github.com/your-org/req-eng-platform"
documentation = "https://github.com/your-org/req-eng-platform/docs"

[dependency-groups]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.5.0",
  "ruff>=0.1.0",
  "mypy>=1.7.0",
  "black>=23.12.0",
  "isort>=5.13.0",
  "pre-commit>=3.5.0",
  "ipython>=8.18.0",
  "ipdb>=0.13.0"
]

test = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.5.0",
  "httpx>=0.25.0",
  "faker>=20.1.0"
]

lint = [
  "ruff>=0.1.0",
  "mypy>=1.7.0",
  "black>=23.12.0",
  "isort>=5.13.0"
]

docs = [
  "sphinx>=7.2.0",
  "sphinx-rtd-theme>=2.0.0",
  "myst-parser>=2.0.0"
]

[tool.uv]
python-preference = "managed"
compile-bytecode = true

[tool.uv.sources]

[tool.uv.workspace]
members = []

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\\.pyi?$'
extend-exclude = """
/(\n  \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | build\n  | dist\n)/\n"""

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".ruff_cache",
  ".tox",
  ".venv",
  "build",
  "dist",
  "node_modules",
  "venv"
]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "C4",
  "UP",
  "ARG",
  "SIM",
  "TCH",
  "RUF"
]
ignore = ["E501", "B008", "C901", "ARG001"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "sqlalchemy"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "langchain.*",
  "langsmith.*",
  "langgraph.*",
  "chromadb.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "slow: Slow running tests",
  "api: API endpoint tests"
]

[tool.coverage.run]
source = ["src"]
omit = [
  "*/__init__.py",
  "*/tests/*",
  "*/__pycache__/*"
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == '__main__':",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
